Fix in the filtering function to avoid missing some filtered reads

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ importFrom(GenomicAlignments,granges)
 importFrom(GenomicAlignments,invertStrand)
 importFrom(GenomicAlignments,isCompatibleWithSkippedExons)
 importFrom(GenomicAlignments,isCompatibleWithSplicing)
+importFrom(GenomicAlignments,last)
 importFrom(GenomicAlignments,njunc)
 importFrom(GenomicAlignments,readGAlignmentPairs)
 importFrom(GenomicAlignments,readGAlignments)
